fix: check for config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(RapidMenu)
 
 set(CMAKE_CXX_STANDARD 23)
 
-# Add the path to the source files
-file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
+# Add the path to the source files for RapidMenu
+file(GLOB_RECURSE RAPID_MENU_SOURCE_FILES "src/*.cpp")
 
-# Add the executable target
-add_executable(RapidMenu ${SOURCE_FILES})
+# Add the executable target for RapidMenu
+add_executable(RapidMenu ${RAPID_MENU_SOURCE_FILES})
 
 # Find and link against the tomlplusplus library
 find_package(tomlplusplus REQUIRED)
