--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 3.19)
-project(RapidMenu)
+
+# Get version
+file(READ ${CMAKE_CURRENT_SOURCE_DIR}/props.json PROPS)
+string(JSON VER GET ${PROPS} version)
+
+project(RapidMenu
+  DESCRIPTION "Utilize configuration files to create runner scripts."
+  VERSION ${VER})
 
 set(CMAKE_CXX_STANDARD 23)
 
@@ -19,7 +26,7 @@ target_link_libraries(RapidMenu PRIVATE tomlplusplus::tomlplusplus)
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "DRAGONTOS")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libcpptoml-dev")
 set(CPACK_DEBIAN_PACKAGE_LICENSE "GPLv3")
-set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Utilize configuration files to create runner scripts.")
+set(CPACK_DEBIAN_PACKAGE_DESCRIPTION ${DESCRIPTION})
 set(CPACK_DEBIAN_PACKAGE_RELEASE_DIST ON)
 set(CPACK_GENERATOR DEBIAN)
 set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
@@ -27,7 +34,7 @@ set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
 set(CPACK_PACKAGE_VENDOR "DRAGONTOS")
 set(CPACK_RPM_PACKAGE_REQUIRES "tomlplusplus-devel")
 set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")
-set(CPACK_RPM_PACKAGE_DESCRIPTION "Utilize configuration files to create runner scripts.")
+set(CPACK_RPM_PACKAGE_DESCRIPTION ${DESCRIPTION})
 set(CPACK_RPM_FILE_NAME "RPM-DEFAULT")
 set(CPACK_RPM_PACKAGE_RELEASE_DIST ON)
 set(CPACK_GENERATOR RPM)
