--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.28.2)
 
 # Get version
 file(READ ${CMAKE_CURRENT_SOURCE_DIR}/props.json PROPS)
@@ -8,10 +8,19 @@ project(RapidMenu
   DESCRIPTION "Utilize configuration files to create runner scripts."
   VERSION ${VER})
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 26)
+
+# check if build type is set if it isnt set it to release
+if(NOT CMAKE_BUILD_TYPE)
+  set(DCKMAKE_BUILD_TYPE Release)
+endif()
 
 # Add the path to the source files for RapidMenu
 file(GLOB_RECURSE RAPID_MENU_SOURCE_FILES "src/*.cpp")
+
+# add compiler flags
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-03")
 
 # Add the executable target for RapidMenu
 add_executable(RapidMenu ${RAPID_MENU_SOURCE_FILES})
@@ -20,7 +29,6 @@ install(TARGETS RapidMenu DESTINATION bin)
 # Find and link against the tomlplusplus library
 find_package(tomlplusplus REQUIRED)
 target_link_libraries(RapidMenu PRIVATE tomlplusplus::tomlplusplus)
-
 
 # DEBIAN
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "DRAGONTOS")
